[package]
name = "una"
description = "Lightning Network wrapper for all the existing Lightning backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace]
members = [".", "core","bindings/una-python","bindings/una-js","schemas","proto-builder"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin, Lightning and Camembert Developers"]
repository = "https://github.com/blc-org/una"
license = "MIT"
keywords = ["lightning", "bitcoin", "rust"]
categories = ["cryptography::cryptocurrencies","api-bindings","command-line-utilities"]

[[bin]]
name = "una-cli"
path = "src/cli.rs"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "3.0", features = [ "derive", "env" ] }
tokio = { version = "1", features = ["full"] }
una-core = { path = "core" }

[profile.release]
lto = true