[package]
name = "una-core"
description = "Core library of Una, the Universal (Lightning) Node API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"
hex = "0.4"
base64 = "0.13.0"
schemars = "0.8.10"
tonic = { version = "0.8.0", features = ["tls"] }
prost = "0.11"
cuid = "1.2.0"
http = "0.2.8"
regex = "1.6.0"
