[package]
name = "una-proto-builder"
description = "Utility package that builds protobuf files for Una, the Universal (Lightning) Node API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic = { version = "0.8.0", features = ["tls"] }
prost = "0.11"
tonic-build = "0.8"
