[package]
name = "una-schemas"
description = "Utility package that extracts Rust structures to JSON schemas for Una, the Universal (Lightning) Node API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
schemars = "0.8.10"
una-core = { path = "../core" }
