[package]
name = "una-js"
description = "NodeJS bindings for Una, the Universal (Lightning) Node API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.7.0", default-features = false, features = ["napi4","serde-json","tokio_rt"] }
napi-derive = "2.7.0"
una-core = { path = "../../core" }
futures = "0.3"
tokio = "1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[build-dependencies]
napi-build = "2.0.1"
