[package]
name = "una-python"
description = "Python bindings for Una, the Universal (Lightning) Node API"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "una"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module", "abi3-py37"] }
pyo3-asyncio = { version = "0.16", features = ["tokio-runtime"] }
tokio = "1.9"
pythonize = "0.16.0"
una-core = { path = "../../core" }
